# document_cleaner

./: Cargo.toml
assets/: demo_page.xcf  icon.xcf
src/: lib.rs  main.rs
